<resources>
    <string name="app_name">安卓作业</string>
    <string name="home">首页</string>
    <string name="phone">通讯录</string>
    <string name="find">发现</string>
    <string name="personal">个人</string>
    <string name="edit_hint">发现有趣的事</string>
    <string name="author">袁健策</string>
    <string name="number">135</string>
    <string name="study_number">3117004905</string>
    <string name="night">夜间模式</string>
</resources>
