<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_head_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/head_img" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_number"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/circle_head_img"
            android:text="@string/author"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/circle_head_img"
            android:text="@string/number"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_number"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@+id/circle_head_img"
            android:text="@string/study_number"
            android:textColor="#fff"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv_night"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/night"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_night"
            android:layout_marginStart="10dp"
            android:text="@string/night"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <Switch
            android:id="@+id/switch_day_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c2c2c2" />

</LinearLayout>